init 1165 port